srcs/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: hirefy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: gateway:dev
          ports:
            - containerPort: 8081


---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: hirefy
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
