srcs/k8s/waf.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: waf
  namespace: hirefy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf
  template:
    metadata:
      labels:
        app: waf
    spec:
      containers:
        - name: waf
          image: waf:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP 
---
apiVersion: v1 
kind: Service 
metadata:
  name: waf
  namespace: hirefy 
spec:
  selector:
    app: waf
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
